# saga

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
src/game/: dice.rs  mod.rs  test.rs
src/game/unit/: basis.rs  body.rs  mind.rs  mod.rs  sex.rs  size.rs  stats.rs
src/game/unit/skills/: academic.rs  arcane.rs  artistic.rs  craft.rs  martial.rs  mod.rs  peasant.rs  physical.rs  social.rs
src/game/unit/stats/: core.rs  mod.rs  skills.rs
src/render/: layer.rs  mod.rs  tile.rs
src/world/: layer.rs  mod.rs  tile.rs
